--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -17,8 +17,13 @@
                 <a href="#" class="text-lg font-semibold hover:text-gray-500">New Item </a>
                 <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse </a>
 
-                <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Signup </a>
-                <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log In </a>
+                {% if request.user.is_authenticated %}
+                    <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Inbox </a>
+                    <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Dashboard </a>
+                {% else %}
+                    <a href="{% url 'core:signup' %}" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">SignUp </a>
+                    <a href="{% url 'core:login' %}" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Login </a>
+                {% endif %}
             </div>
         </nav>
 
@@ -39,11 +44,12 @@
 
                 <ul class="space-y-2">
                     <li> <a href="#" class="text-lg text-teal-500 hover:text0teal-500">About</a></li>
-                    <li> <a href="contact" class="text-lg text-teal-500 hover:text0teal-500">Contact</a></li>
+                    <li> <a href="{% url 'core:contact' %}" class="text-lg text-teal-500 hover:text0teal-500">Contact</a></li>
                     <li> <a href="#" class="text-lg text-teal-500 hover:text0teal-500">Privacy</a></li>
                     <li> <a href="#" class="text-lg text-teal-500 hover:text0teal-500">Terms of use</a></li>
                 </ul>
             </div>
+        </footer>
     </body>
 
 </html>
